// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component renders 1`] = `
<div
  class="container"
>
  <div
    class="input   mdc-text-field mdc-text-field--upgraded"
  >
    <input
      class=" mdc-text-field__input"
      id="text-field-test"
      spellcheck="false"
      type="text"
      value=""
    />
    <label
      class=" mdc-floating-label"
      for="text-field-test"
    >
      Enter a SQL statement
    </label>
    <div
      class=" mdc-line-ripple"
    />
  </div>
</div>
`;

exports[`Component renders while pending 1`] = `
<div
  class="container"
>
  <div
    class="input   mdc-text-field mdc-text-field--upgraded"
  >
    <input
      class=" mdc-text-field__input"
      id="text-field-test"
      spellcheck="false"
      type="text"
      value=""
    />
    <label
      class=" mdc-floating-label"
      for="text-field-test"
    >
      Enter a SQL statement
    </label>
    <div
      class=" mdc-line-ripple"
    />
  </div>
  <nav
    class="progress  mdc-linear-progress mdc-linear-progress--indeterminate"
    role="progressbar"
  >
    <div
      class=" mdc-linear-progress__buffering-dots"
    />
    <div
      class=" mdc-linear-progress__buffer"
    />
    <div
      class=" mdc-linear-progress__bar mdc-linear-progress__primary-bar"
    >
      <div
        class=" mdc-linear-progress__bar-inner"
      />
    </div>
    <div
      class=" mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
    >
      <div
        class=" mdc-linear-progress__bar-inner"
      />
    </div>
  </nav>
</div>
`;
